# audio-transferer

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
src/: AudioTr.cpp  AudioTr.hpp  main.cpp
src/Preambul/: Preambul.cpp  Preambul.hpp
src/Receipter/: Receipter.cpp  Receipter.hpp
src/Transfer/: Transfer.cpp  Transfer.hpp
src/Transmission/: Transmission.cpp  Transmission.hpp
src/Utils/: MessageConverter.cpp  MessageConverter.hpp  SenderBit.cpp  SenderBit.hpp
